--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,5 +20,7 @@ language: it
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Un bel sogno
 url: http://www.gutenberg.org/ebooks/47069
